fix: altera "SpaceBlog" para "Spacedevs" em vários arquivos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Blog
         class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[300px] h-[300px] bg-brand-purple/20 blur-[120px] rounded-full pointer-events-none">
       </div>
       <h1 class="text-5xl md:text-7xl font-display font-bold text-white mb-6 relative z-10">
-        Space<span class="text-brand-purple">Blog</span>
+        Space<span class="text-brand-purple">devs</span> Blog
       </h1>
       <p class="text-gray-400 max-w-2xl mx-auto text-lg relative z-10">
         {{ site.description }}
